--- a/app/sobre.html
+++ b/app/sobre.html
@@ -2,17 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <title>Sobre o Alura Timer</title>
+    <link rel="stylesheet" href="css/sobre.css">
 </head>
 <body>
-    <h4>Página Sobre</h4>
-    <p>Este é apenas um exemplo de página sobre para testar funcionalidade de comunição entre processos.</p>
-    <a href="#" id="linkSistemaFR">Sistema FR</a>
-    <p>Versão do Electron: <span id="versionElectron"></span></p>
-    <p>Versão do NodeJS: <span id="versionNodeJS"></span></p>
-    <a href="#" id="linkFechar">Fechar</a>
+
+    <div class="container">
+        <img src="img/icon.png" alt="Logo do AluraTimer">
+        <p>O Alura timer é para voce guardar seus tempos de estudo na Alura.</p>
+        <p>Versão: 1.0.0</p>
+        <p>Feito por <a href="#" id="link-twitter">Douglas Quintanilha</a></p>
+        <p>Versão do Electron <span id="versao-electron"></span></p>
+        <a href="#" id="link-fechar">Fechar</a>
+
+    </div>
     <script src="js/sobre.js"></script>
 </body>
 </html>
