--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <title>Alura Timer</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h2>Olá mundo!</h2>
-    <a href="#" id="linkSobre">Sobre</a>
-    <script src="js/renderer.js"></script>
+    <section class="container">
+        <div id="link-sobre">
+            <img class="info-button" src="img/info-button.svg">
+        </div>
+        <h1 class="titulo">Alura Timer</h1>
+        <div class="timer">
+            <div class="relogio">
+                <span class="tempo">00:10:23</span>
+            </div><!--
+            --><div class='controles'>
+                <img class="botao-play" src="img/play-button.svg">
+            </div>
+            <div class="curso-container">
+                <span class="curso">logica-programação</span>
+            </div>
+        </div>
+
+    </section>
+    <script>require('./js/renderer')</script>
 </body>
 </html>
