--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,12 @@
             <div class="curso-container">
                 <span class="curso">logica-programação</span>
             </div>
+            <div class="curso-container reset">
+                <span class="reset-timer">Resetar Timer</span>
+            </div>
         </div>
 
     </section>
-    <script>require('./js/renderer')</script>
+    <script type="module" src='./js/renderer.js'></script>
 </body>
 </html>
